<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/big_padding"
    tools:context=".ui.AddProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relative_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/add_product_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/big_margin"
                android:letterSpacing="-0.02"
                android:text="@string/add_product"
                android:textColor="@color/header"
                android:textSize="@dimen/header_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_back_arrow" />

        </RelativeLayout>

        <TextView
            android:id="@+id/add_product_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:gravity="center"
            android:letterSpacing="-0.02"
            android:text="@string/add_product_description"
            android:textColor="@color/description"
            android:textSize="@dimen/description_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relative_ly" />

        <androidx.cardview.widget.CardView
            android:id="@+id/add_product_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/add_product_desc_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="50dp"
            app:cardElevation="15dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/add_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                app:tint="@color/dark_green" />

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/add_product_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginRight="@dimen/normal_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/product_name"
            android:drawableStart="@drawable/ic_product"
            android:drawablePadding="@dimen/normal_padding"
            android:drawableTint="@color/form"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:letterSpacing="-0.02"
            android:paddingStart="@dimen/big_padding"
            android:paddingEnd="@dimen/big_padding"
            android:textColor="@color/description"
            android:textColorHint="@color/form"
            android:textSize="@dimen/edit_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_product_image" />

        <EditText
            android:id="@+id/add_product_price"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginRight="@dimen/normal_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/add_product_price"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:letterSpacing="-0.02"
            android:drawableStart="@drawable/ic_price"
            android:drawablePadding="@dimen/normal_padding"
            android:drawableTint="@color/form"
            android:paddingStart="@dimen/big_padding"
            android:paddingEnd="@dimen/big_padding"
            android:textColor="@color/description"
            android:textColorHint="@color/form"
            android:textSize="@dimen/edit_text_size"
            app:layout_constraintEnd_toEndOf="@id/add_product_name"
            app:layout_constraintStart_toStartOf="@id/add_product_name"
            app:layout_constraintTop_toBottomOf="@id/add_product_name" />

        <EditText
            android:id="@+id/add_product_category"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginRight="@dimen/normal_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/add_product_category"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:letterSpacing="-0.02"
            android:drawableStart="@drawable/ic_category"
            android:drawablePadding="@dimen/normal_padding"
            android:drawableTint="@color/form"
            android:paddingStart="@dimen/big_padding"
            android:paddingEnd="@dimen/big_padding"
            android:textColor="@color/description"
            android:textColorHint="@color/form"
            android:textSize="@dimen/edit_text_size"
            app:layout_constraintEnd_toEndOf="@id/add_product_price"
            app:layout_constraintStart_toStartOf="@id/add_product_price"
            app:layout_constraintTop_toBottomOf="@id/add_product_price" />

        <EditText
            android:id="@+id/add_product_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginRight="@dimen/normal_margin"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_description"
            android:drawablePadding="@dimen/normal_padding"
            android:drawableTint="@color/form"
            android:hint="@string/add_product_description_et"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:letterSpacing="-0.02"
            android:paddingStart="@dimen/big_padding"
            android:paddingEnd="@dimen/big_padding"
            android:textColor="@color/description"
            android:textColorHint="@color/form"
            android:textSize="@dimen/edit_text_size"
            app:layout_constraintEnd_toEndOf="@id/add_product_category"
            app:layout_constraintStart_toStartOf="@id/add_product_category"
            app:layout_constraintTop_toBottomOf="@id/add_product_category" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_product_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginRight="@dimen/normal_margin"
            android:background="@drawable/main_button_bg"
            android:elevation="@dimen/small_margin"
            android:letterSpacing="-0.02"
            android:text="Add Product"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/edit_text_size" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>